# subiekt_agent

./: .env  .gitignore  build.ps1  config.json  main_gui.py  pyproject.toml  scratch_test.py  subiekt_agent.spec
app/: config.py  dependencies.py  exceptions.py  gui_api.py  lifespan.py  main.py  schemas.py
app/gui/: log_handler.py  tray.py  webview_window.py  window.py
app/repositories/: base_repository.py  document_repository.py  payment_form_repository.py  product_repository.py
app/services/: config_service.py  document_service.py
app/sfera/: sfera_instance.py  sfera_worker.py
app/static/: index.html
app/tunnel/: __init__.py  cloudflare_manager.py  (+1 more)
frontend/: package-lock.json  package.json  vite.config.ts
installer/: setup.iss
scratch/: check_columns.py  check_db.py  check_db_ado.py  check_operators.py  check_prices.py  check_prices_of_bundle.py  check_settings.py  check_stock_table.py  check_tw_cena.py  clean_gen_py.py  find_and_test_query.py  find_tables.py  inspect_constants.py  inspect_fs.py  inspect_methods.py  inspect_payment.py  inspect_payment_dictionary.py  inspect_sfera.py  query_documents.py  query_ksef_docs.py  query_payment_forms.py  query_printers.py  test_api_endpoints.py  test_bulk_components.py  test_bulk_endpoint.py  test_bulk_stock.py  test_conn.py  test_drukuj_do_pliku.py  test_fiscal.py  test_getattr.py  test_http_endpoints.py  test_http_print.py  test_length.py  test_numer_pelny.py  test_numer_przed_zapisz.py  test_payment_fallback_unit.py  test_payment_logic.py  test_sfera_login.py  verify_bundle_components.py  verify_changes.py  (+1 more)
(+16 files in other folders)
