[tool.poetry]
name = "subiekt-agent"
version = "0.1.0"
description = "On-premise agent for integrating SuppSales with Subiekt GT via Sfera."
authors = ["SuppSales Team <dev@suppsales.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.27.1"}
pydantic = "^2.6.4"
pydantic-settings = "^2.2.1"
pystray = "^0.19.5"
Pillow = "^10.2.0"
pyinstaller = "^6.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"